[metadata]
# replace with your username:
name = monnify-python
version = 1.0.0
url = https://github.com/eminisolomon/monnify-python.git
author = Solomon Olatunji
author_email = aotoluwalope@gmail.com
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
description = A small bank algorithm that predict nigeria bank
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
